# remo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  install.sh  maverick.yaml  playwright.config.ts  project-menu.sh  pyproject.toml  release-please-config.json  remo  remo.bash.archived  run.sh
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  provision.yml  release-please.yml  release.yml  smoke-test-cleanup.yml  smoke-test.yml  sync-install.yml  teardown.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
ansible/: README.md  ansible.cfg  aws_configure.yml  aws_resize.yml  aws_site.yml  aws_teardown.yml  aws_update_ip.yml  configure.yml  hetzner_configure.yml  hetzner_provision.yml  hetzner_resize.yml  hetzner_site.yml  hetzner_teardown.yml  incus_bootstrap.yml  incus_configure.yml  incus_container.yml  incus_container_configure.yml  incus_container_teardown.yml  incus_provision.yml  incus_resize.yml  incus_site.yml  incus_teardown.yml  notifier_deploy.yml  proxmox_bootstrap.yml  proxmox_configure.yml  proxmox_provision.yml  proxmox_resize.yml  proxmox_site.yml  proxmox_teardown.yml  requirements.yml  site.yml
ansible/group_vars/: all.yml  incus_containers.yml  proxmox_containers.yml
ansible/inventory/: hosts.yml  incus_containers.yml
ansible/tasks/: configure_dev_tools.yml
docker/: Dockerfile  compose.example.yml  entrypoint.sh
docs/: aws.md  credential-broker.md  hetzner.md  incus.md  install.sh  proxmox.md  remo-fnox-spec.md  remo-web-speckit-input.md  remo-web.html  web-session-interface.md
docs/adr/: 0001-deacon-remo-boundary.md
features/remo-notifier-source/: README.md  devcontainer-feature.json  install.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: README.md
frontend/scripts/: copy-ghostty-wasm.mjs
frontend/src/: main.tsx
notifier/: Dockerfile
scripts/: grep-credential-leaks.sh  setup-aws-oidc.sh
specs/001-bootstrap-incus-host/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-incus-container-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-python-cli-rewrite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-proxmox-container-support/: spec.md
specs/005-credential-broker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-provider-snapshots/: plan.md  quickstart.md  research.md  tasks.md
specs/006-credential-broker-laptop-push/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-notifier-sidecar/: addendum-001-standing-grants.md  data-model-addendum-001.md  data-model.md  plan-addendum-001.md  plan.md  quickstart.md  research-addendum-001.md  research.md  spec.md  tasks-addendum-001.md  tasks.md
specs/007-provider-snapshots/: data-model.md  spec.md
specs/008-notifier-channels/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-notifier-source-registration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-web-session-interface/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-web-adopt/: data-model.md  plan.md  quickstart-results.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-web-adopt-pairing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-managed-instance-tags/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-register-ssh-host/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tests/: conftest.py
(+466 files in other folders)
