[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remo-cli"
version = "2.0.0rc4"
description = "Remote development environment CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "InquirerPy>=0.3.4",
    "boto3",
    "hcloud",
    "ansible-core>=2.18.0,<2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
    "mypy",
]
# Channel-agnostic notifier service core (no channel delivery SDKs). httpx
# drives the agentsh approver client. See specs/008-notifier-channels (R4/R9).
notifier-core = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "structlog>=24.4",
    "httpx>=0.27",
    "tomli>=2.0; python_version<'3.11'",
]
# Telegram channel = core + the Telegram delivery SDK only.
notifier-telegram = [
    "remo-cli[notifier-core]",
    "python-telegram-bot>=21.6",
]
# Back-compat alias: `.[notifier]` still installs the Telegram channel image.
notifier = [
    "remo-cli[notifier-telegram]",
]

[project.scripts]
remo-cli = "remo_cli.cli.main:cli"
remo = "remo_cli.cli.main:cli"
remo-notifier = "remo_cli.notifier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/remo_cli"]

[tool.hatch.build.targets.wheel.force-include]
"ansible" = "remo_cli/ansible"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
