[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remo-cli"
version = "2.2.0rc6"
description = "Remote development environment CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "InquirerPy>=0.3.4",
    "boto3",
    "hcloud",
    "ansible-core>=2.18.0,<2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "ruff",
    "mypy",
    # Transport backing starlette's TestClient, which every tests/**/web
    # suite builds on. Starlette does not depend on it (the service itself
    # never makes HTTP client calls), so without this the web tests fail at
    # collection, not as assertions.
    "httpx2",
]
web = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "pydantic>=2",
]

[project.scripts]
remo-cli = "remo_cli.cli.main:cli"
remo = "remo_cli.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/remo_cli"]

[tool.hatch.build.targets.wheel.force-include]
"ansible" = "remo_cli/ansible"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
